# waylively

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-appimage.yml  release-appimage.yml
data/: io.github.os_guy_original.Waylively.desktop  io.github.os_guy_original.Waylively.metainfo.xml
scripts/: build-appimage.sh  install-appimage.sh  uninstall-appimage.sh
waylively/: __init__.py  cli.py  screenshot.py
waylively/daemon/: __init__.py  service.py
waylively/engine/: __init__.py  renderer.py
waylively/ui/: __init__.py  app.py  window.py
waylively/ui/assets/: style.css
waylively/ui/assets/default_wallpaper/: LivelyInfo.json  LivelyProperties.json  index.html
waylively/ui/assets/lantern_wallpaper/: LivelyInfo.json  LivelyProperties.json  index.html
waylively/ui/assets/orbits_wallpaper/: LivelyInfo.json  index.html
waylively/ui/assets/starfield_wallpaper/: LivelyInfo.json  index.html
waylively/ui/components/: __init__.py  card.py  tweak_dialog.py
waylively/utils/: __init__.py  config.py  daemon_manager.py  thumbnailer.py
waylively/utils/service/: __init__.py  base.py  openrc.py  systemd.py
